--- a/index.html
+++ b/index.html
@@ -52,11 +52,24 @@
         </div>
 
         <div class="col-md-12 col-sm-12 col-lg-12">
-          <canvas id="Asymptote"> </canvas>
+          <iframe
+            id="asymptoteCanvas"
+            src="dibujo.html"
+            width="100%"
+            height="800"
+          ></iframe>
         </div>
       </div>
     </div>
 
+    <button onclick="resetCanvas()">Reiniciar</button>
+
+    <script>
+      function resetCanvas() {
+        var iframe = document.getElementById("asymptoteCanvas");
+        iframe.src = iframe.src; // Esto recarga el iframe, volviendo al estado inicial
+      }
+    </script>
     <footer class="site-footer">
       <div class="container text-center">
         <div class="row align-items-center">
