--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <p>
               <a
                 title="ir al repositorio"
-                href="https://github.com/glacy/varilla-B"
+                href="https://github.com/glacy/induccion_EM"
                 target="_blank"
                 rel="noopener"
                 ><span class="material-icons" aria-hidden="true">code</span
